tests/neg-custom-args/sourcepath2/hi/A.scala
// Missing `package hi`

class Hello { // error
  val x: Int = 1
}
